--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,31 +2,23 @@
 layout: default
 ---
 
-<hr/>
+<article class="post-container post-container--single" itemscope itemtype="http://schema.org/BlogPosting">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="post-meta">
+      <img src="/images/calendar.png" width="20px"/> 
+      <time datetime="{{page.date | date: date_to_xmlschema}}" itemprop="datePublished" class="post-meta__date date">{{page.date | date: "%F"}}</time>  
+         
+      <span id="busuanzi_container_page_pv"> | 阅读：<span id="busuanzi_value_page_pv"></span>次</span>
+    </p>
+    </div>
+  </header>
 
-<html><article class="post"></html>
-
-<p>  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header></p>
-
-<p>  <div class="post-content">
+  <section class="post">
     {{ content }}
-  </div>
-<!-- 网易云开始 -->
-<div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
-<script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
-<script>
-var cloudTieConfig = {
-  url: document.location.href, 
-  sourceId: "",
-  productKey: "fdf81a001e304ca18a4fda6a7922d30e",
-  target: "cloud-tie-wrapper"
-};
-var yunManualLoad = true;
-Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
-</script>
-<!-- 网易云结束 -->
+
+  </section>
 </article>
 
-
+{% include new-old.html %}
+{% include comments.html %}
