--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,11 +69,11 @@
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://baixin.io/">leopardpan</a> |
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://blog.fgkey.com/">ghni21</a> |
             <iframe
                 style="margin-left: 2px; margin-bottom:-5px;"
                 frameborder="0" scrolling="0" width="91px" height="20px"
-                src="https://ghbtns.com/github-btn.html?user=leopardpan&repo=leopardpan.github.io&type=star&count=true" >
+                src="https://ghbtns.com/github-btn.html?user=ghni21&repo=ghni21.github.io&type=star&count=true" >
             </iframe>
             </p>
         	<div align="right">
