--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,20 @@ layout: default
     {{ content }}
 
   </section>
+  <!-- 网易云跟帖 -->
+<div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+<script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
+<script>
+var cloudTieConfig = {
+  url: document.location.href, 
+  sourceId: "",
+  productKey: "fdf81a001e304ca18a4fda6a7922d30e",
+  target: "cloud-tie-wrapper"
+};
+var yunManualLoad = true;
+Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
+  // 云跟帖结束
+</script>
 </article>
 
 {% include new-old.html %}
