--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,6 @@ layout: default
 
   </section>
   {% include new-old.html %}
-  {% include comments.html %}
+  <!-- {% include comments.html %} -->
 </article>
 
