--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  <!-- {% include head.html %} -->
 
   <body>
 
@@ -24,7 +24,7 @@
       </div>
     </span>
     
-    <!-- {% include side-panel.html %} -->
+    {% include side-panel.html %} 
 
     <div class="content-wrapper">
         <div class="content-wrapper__inner">
